--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "humps": "^2.0.1",
+    "libphonenumber-js": "^1.12.10",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
