--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "humps": "^2.0.1",
     "libphonenumber-js": "^1.12.10",
     "lodash": "^4.17.21",
+    "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
@@ -33,6 +34,7 @@
     "@types/humps": "^2",
     "@types/lodash": "^4",
     "@types/node": "^24.1.0",
+    "@types/qs": "^6",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-redux": "^7.1.34",
