--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
@@ -28,7 +29,9 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.7.0",
     "redux-saga": "^1.3.0",
-    "reselect": "^5.1.1"
+    "reselect": "^5.1.1",
+    "uuid": "^11.1.0",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
